--- a/public/neck.css
+++ b/public/neck.css
@@ -263,3 +263,29 @@ body {
     width: 400px;
     height: 400px;
 }
+
+
+#notification {
+    /* display: flex; */
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    position: fixed;
+    width: 360px;
+    height: fit-content;
+    background-color: #fff4f8;
+    border-radius: 16px;
+    margin: auto;
+    padding: 16px;
+    color: red;
+}
+
+#close_btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    color: red;
+    
+}
